--- a/inventory.yml
+++ b/inventory.yml
@@ -19,8 +19,9 @@
   - name: Run inventory script
     raw: /var/tmp/inventory.sh > /var/tmp/inventory.out
 
-  - name: Give output
-    command: /usr/bin/cat /var/tmp/inventory.out
-    register: clc_svr_var
-
-  - debug: var=clc_svr_var.stdout
+#  - name: Give output
+#    command: /usr/bin/cat /var/tmp/inventory.out
+#    register: clc_svr_var
+#
+#  - debug: var=clc_svr_var.stdout
+  - name: Please see /var/tmp/inventory.out for inventory in CSV format.
