--- a/inventory.yml
+++ b/inventory.yml
@@ -10,7 +10,8 @@
 #  - raw: cat /etc/*release >> /tmp/junk
 #  - raw: echo "" >>/tmp/junk
 #  - raw: echo "whoami=`whoami`" >> /tmp/junk
-  - raw: which jq > /tmp/junk
+#  - raw: which jq > /tmp/junk
+  - raw: hostname > /tmp/junk
   - raw: ls -la /usr/bin/jq >> /tmp/junk
   - raw: cat /tmp/junk
     register: clc_var
