--- a/inventory.yml
+++ b/inventory.yml
@@ -13,7 +13,7 @@
 #  - raw: which jq > /tmp/junk
 #  - raw: hostname > /tmp/junk
 #  - raw: ls -la /usr/bin/jq >> /tmp/junk
-  - raw: sudo yum install jq -y
+  - raw: /usr/bin/sudo /usr/bin/yum install jq -y
   - raw: cat /tmp/junk
     register: clc_var
 
